syntax = "proto3";
package shutdown;

service Shutdown {
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
}

message ShutdownRequest {}

message ShutdownResponse {
  // seconds
  int32 timestamp = 1;
}
