syntax = "proto3";
package version;

service Version {
  rpc GetVersion (VersionRequest) returns (VersionResponse);
}

message VersionRequest {}

message VersionResponse {
  string version = 1;
  map<string, string> components_version = 2;
}
